# dimensions

./: .editorconfig  .eslintrc.json  .gitignore  LICENSE  Makefile  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
core/: .gitignore  Cargo.toml  Makefile
core/src/: act.rs  export.rs  impls.rs  lib.rs  main.rs  ports.rs  scenarios.rs  util.rs
core/src/act/: config.rs  creator.rs  dimension.rs  feedstock.rs  game.rs  location.rs  map.rs  maps.rs  meta.rs  roles.rs  stock.rs  universe.rs
core/src/act/config/: i18n.rs
core/src/act/feedstock/: functional.rs
core/src/assets/: fonts.rs
core/src/d_impl/: creator.rs  dimension.rs  feedstock.rs  universe.rs
core/src/dimpl/: config.rs  creator.rs  dimension.rs  feedstock.rs  gen.rs  location.rs  meta.rs  universe.rs
core/src/dimpl/feedstock/: functional.rs
core/src/export/: data.rs  runner.rs  x_core.rs  x_data.rs  x_operations.rs  x_runner.rs
core/src/export/x_data/: x_color.rs  x_font.rs  x_image.rs  x_serialization.rs  x_style.rs  x_text_style.rs
core/src/export/x_operations/: x_debug.rs  x_image_combine.rs  x_image_gen.rs  x_map.rs  x_runner.rs
core/src/impls/: config.rs  creator.rs  dimension.rs  feedstock.rs  gen.rs  location.rs  map.rs  meta.rs  stock.rs  universe.rs
core/src/impls/config/: creator_config.rs
core/src/impls/creator/: subject_creator.rs
core/src/operations/: runner.rs
core/src/operators/: cli.rs  runner.rs
core/src/ports/: models.rs  operations.rs  traits.rs
core/src/scenarios/: base.rs  config.rs
core/src/util/: u_image.rs
ui/: .eslintrc.cjs  (+10 more)
(+85 files in other folders)
