[package]
name = "core"
version = "0.0.1"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
image = "0.24"
rusttype = "0.9"
imageproc = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
rand = "0.8"
